--- a/01선택자/index01.html
+++ b/01선택자/index01.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    
-    <h3>헬로월드</h3>
+    <h1>헬로월드</h1>
     <h3>코드수정</h3>
     <p>블럭요소</p>
     <div>블럭요소</div>
@@ -23,8 +23,8 @@
     <!--인라인 요소컨텐츠의 내용이 너비가 됩니다.
     인라인 안에는 인라인 요소만 넣을 수 있습니다.-->
 
-    <a href="">인라인</a>
-    <img src="">
+    <a href="https://www.naver.com/">인라인</a>
+    <img src="피카츄.webp">
     <b>인라인</b>
     <strong>인라인</strong>
     <small>인라인</small>
