--- a/01선택자/index02(스타일시트).html
+++ b/01선택자/index02(스타일시트).html
@@ -6,8 +6,9 @@
     <title>Document</title>
 
     <!-- link태그를 이용해서 컴포트-->
-    <link rel="stylesheet" href="css/index02.css">       
+    <link rel="stylesheet" href=css/index02.css>       
     <style>
+        
         h2{color:blue;}
         h1{color:aqua;}
 
@@ -20,6 +21,8 @@
 
     <h2>내부 스타일 시트</h2>
 
-    <h1 style="color:red; font-size: 15px;">인라인 시트</p>
+    <h1 style="color:red; font-size: 30px;">인라인 시트</p>
+    <h2 style="color: aquamarine; font-size: 100px;">인라인 시트</h2>
+    <p style="display: inline; color: blue; font-size: 1000px;">인라인시트3</p>
 </body>
 </html>
