--- a/01선택자/index03(선택자).html
+++ b/01선택자/index03(선택자).html
@@ -6,11 +6,11 @@
     <title>Document</title>
 <style>
     /**{color:red;}여백을 없애고, 기본 스타일을 없애는 용도로 씁니다.
-*/  .a{color:green;}
-    b,i{color:red;}
-    #a{color:pink;}
-    /*클래스가 a인 태그랑 아이디가 aㅣㅇㄴ 태그를 동시에 디자인하면??
- */   .a, #a, .b{font-weight: bold}
+*/  .a{color:green;font-size: 40px;}
+    b,i{color:red; font-size: 30px; font-style: italic; font-size: 100px;}
+    #a{color:pink;font-size: 50px;}
+    /*클래스가 a인 태그랑 아이디가 a인 태그를 동시에 디자인하면??
+ */   .a, #a, .b{font-weight: bold; font-size: 100px;}
 
 </style>
 </head>
@@ -18,7 +18,7 @@
     
 
     <b>태그 선택자</b><br>
-    <b>태그 선택자</b>
+    <b>태그 선택자</b><br>
     <i>태그선택자</i>
 
     <section id="a">아이디 선택자</section>
